# server/src/routes/asset.routes.ts
@@ -5,6 +5,7 @@ import {
   downloadAsset,
   getInboxContents,
   markInboxSeen,
+  updateNote,
 } from "@/controllers/asset.controller";
 import { factory } from "@/factory";
 
@@ -13,6 +14,7 @@ const assetRoutes = factory
   .get("/workspace/:workspaceSlug/inbox", ...getInboxContents)
   .post("/workspace/:workspaceSlug/inbox/seen", ...markInboxSeen)
   .post("/workspace/:workspaceSlug/inbox/notes", ...createInboxNote)
+  .patch("/workspace/:workspaceSlug/assets/:assetId/note", ...updateNote)
   .post("/workspace/:workspaceSlug/images/:assetId/crop", ...cropImage)
   .delete("/workspace/:workspaceSlug/assets/:assetId", ...deleteAsset)
   .get("/workspace/:workspaceSlug/assets/:assetId/download", ...downloadAsset);
